--- a/index.css
+++ b/index.css
@@ -42,11 +42,11 @@
 }
 
 .main_content {
-    margin-top: 10%;
+   
     display: flex;
     flex-direction: column;
    height: 350px;
-   width: 60%;
+   width: 70%;
    overflow: hidden;
    border: 0px solid black;
    justify-content: center;
@@ -71,4 +71,15 @@
 
 .buttons input:hover {
     color:hsl(219deg 88% 55%);
+}
+
+.title2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.wrapper {
+    margin-top: 7%;
 }
