--- a/index.css
+++ b/index.css
@@ -10,9 +10,10 @@
     display: flex;
     justify-content: space-around;
     background-color:#00171F;
-    height: 60px;
+    height: auto;
+    min-height: 60px;
     align-items: center;
-    
+    flex-wrap: wrap;
 }
 
 .title {
@@ -75,13 +76,15 @@
     color:hsl(219deg 88% 55%);
 }
 
-.title2 {
+.stopw {
     display: flex;
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 20px;
+    color:hsl(219deg 88% 55%) ;
+    
 }
 
 .wrapper {
-    margin-top: 7%;
+    margin-top: 6%;
 }
