--- a/timer.css
+++ b/timer.css
@@ -48,3 +48,8 @@
      
 }
 
+.input_feild input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
