translator html css

--- a/timer.css
+++ b/timer.css
@@ -3,7 +3,7 @@
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 20px;
-    color:hsl(219deg 88% 55%)
+    color:hsl(219deg 88% 55%);
 }
 
 .wrapper {
