--- a/translator.css
+++ b/translator.css
@@ -9,6 +9,7 @@
 .wrapper {
     display: flex;
     flex-direction: row;
+   
 }
 
 .xx {
@@ -26,6 +27,10 @@
     border:0px solid #999999;
     background-color: whitesmoke;
     font-family: 'Alatsi';
+}
+
+textarea:focus {
+  
 }
 
 .output {
@@ -65,4 +70,5 @@
 
 .btn {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
